# modulefinder-revamped

./: README.md  modulefinder_revamped.py  pyproject.toml  test_modulefinder.py
misc/: _modulefinder_rewrite1.py  _modulefinder_typed.py
